--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version> <!-- Make sure this is the latest plugin version -->
+				<configuration>
+					<source>21</source>  <!-- Ensure this is set to 21 -->
+					<target>21</target>  <!-- Ensure this is set to 21 -->
+				</configuration>
+			</plugin>
 		</plugins>
 
 	
